@@ -28,7 +28,7 @@ plan tests => 0 + 57
                 + 7*7  # factor extra tests
                 + 8    # factor in scalar context
                 + scalar(keys %sigmas)
-                + 2    # divisors
+                + 3    # divisors
                 + 0;
 
 # On a 64-bit machine, put all 32-bit nums in /tmp/foo, 64-bit in /tmp/foo2
@@ -188,5 +188,6 @@ while (my($n, $s4) = each (%sigmas)) {
   is_deeply( \@s, $s4, "sigma_{0..3}($n)" );
 }
 
+is_deeply( [divisors(1)], [1], "divisors(1) in list context" );
 is_deeply( [divisors(9283540924)], [qw/1 2 4 7 14 28 331555033 663110066 1326220132 2320885231 4641770462 9283540924/], "divisors(9283540924)" );
 is( scalar(divisors(9283540924)), 12, "scalar divisors(9283540924) = 12" );
